ASSIGMENT/cloud computing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campuspulse-service
  labels:
    app: campuspulse
spec:
  type: ClusterIP
  selector:
    app: campuspulse
  ports:
  - port: 80
    targetPort: 8000
    name: http
